# OpenLaunch

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  openlaunch.dio
.github/ISSUE_TEMPLATE/: bug_report.md  error-report.md  error_report.md  feature_request.md
.github/workflows/: build-dev.yml  build-main.yml  codacy-scan.yml  codacy.yml  devskim.yml  ethicalcheck.yml  first-greetings.yml  ossar.yml  rust-clippy.yml
script/: 001_Commit-to.sh  002_Push-to.sh  003_Build.sh
src/: lib.rs
src/Interface/: mod.rs
src/Interface/Mojang/: mod.rs
src/Interface/Mojang/Yggdrasil/: mod.rs
src/Interface/auth/: mod.rs
src/Interface/resources/: mod.rs
src/Launch/: mod.rs
src/environment/: mod.rs
src/interface/: mod.rs
src/interface/auth/: authlib.rs  microsoft.rs  mojang.rs
src/interface/auth/mojang/: mod.rs
src/interface/data/: mod.rs
src/interface/resources/crebit/: mod.rs
src/interface/resources/curseforge/: mod.rs
