[package]
name = "openlaunch"
version = "0.1.0"
edition = "2021"
crate-type = [
    "rlib",
    "dylib",
    "cdylib",
    "staticlib"
]

[dependencies]
actix = "0.13.0"
flate2 = "1.0.25"
oauth2 = "4.3.0"
reqwest = "0.11.13"
#rust-lzma = "0.5.1"
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
serde_yaml = "0.9.16"
tar = "0.4.38"
walkdir = "2.3.2"
zip = "0.6.3"
